--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.6",
+    "dotenv": "16.4.5",
     "express": "4.19.2",
     "express-handlebars": "7.1.3",
+    "express-session": "1.18.0",
+    "jsonwebtoken": "9.0.2",
     "mongoose": "8.5.2",
     "mongoose-paginate-v2": "1.8.3",
     "multer": "1.4.5-lts.1",
     "nodemon": "3.1.4",
-    "socket.io": "4.7.5",
-    "bcrypt": "5.1.1",
-    "cookie-parser": "1.4.6",
-    "dotenv": "16.4.5",
-    "express-session": "1.18.0",
-    "jsonwebtoken": "9.0.2",
     "passport": "0.7.0",
-    "passport-jwt": "4.0.1"
+    "passport-jwt": "4.0.1",
+    "socket.io": "4.7.5",
+    "uuid": "10.0.0"
   }
 }
